# ncp

./: Cargo.toml  README-MINIMAL.md  README.md  build.rs  test_reverse_pf.sh
.github/workflows/: release_minimal.yaml
cppsrc/: Makefile  directory.cpp  directory.hpp  diskspace.cpp  diskspace.hpp  main.cpp  protocol.cpp  protocol.hpp  recv.cpp  recv.hpp  send.cpp  send.hpp
cppsrc/tests/: integration.sh  test_directory.cpp  test_diskspace.cpp  test_main.cpp  test_protocol.cpp  test_recv.cpp  test_send.cpp
csrc/: .gitignore  Makefile  directory.c  directory.h  diskspace.c  diskspace.h  logging.c  logging.h  main.c  protocol.c  protocol.h  recv.c  recv.h  send.c  send.h  socket_internal.h
csrc/tests/: integration.sh  test_directory.c  test_diskspace.c  test_protocol.c  test_recv.c  test_send.c
proto/: ncp.v1.proto
specs/: specs.md  specs_minimal.md
src/: checksum.rs  directory.rs  diskspace.rs  framing.rs  hostname.rs  logging.rs  main.rs  proto.rs  protocol.rs  recv.rs  send.rs  send_old_final.rs
test/: debug_error.sh  integration.sh  test_listen.sh  test_listen_simple.sh  test_port_forward.sh  test_simple_fix.sh
