[package]
name = "ncp"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"     # Optimize aggressively for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units for better optimization
strip = true        # Strip all symbols
panic = "abort"     # Abort on panic instead of unwinding (reduces panic handling code)
overflow-checks = false  # Disable overflow checks in release

[dependencies]
# No external dependencies - std only
